# fermium

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs  changelog.md  install-sdl2.sh  linux_bindings.sh  mac_bindings.sh  mac_bindings_build.sh  rustfmt.toml  win32_bindings.bat  wrapper.h
.github/workflows/: rust.yml
SDL2-2.0.12/src/stdlib/: SDL_stdlib.c
SDL2-2.26.3/: SDL2.spec
SDL2-2.26.5/: SDL2.spec
c_bits/: other-bits.txt
examples/: controller-events.rs  controller_events.rs  gl_load_timer.rs  init_quit.rs  no_std_rendering.rs  window.rs  window.rs.bak
lib/: SDL2-2.0.9.dmg
lib/linux-x64/: libSDL2-2.0.so.0  libSDL2.la
src/: SDL2-2.0.12-aarch64-unknown-linux-gnu.rs  SDL2-2.0.12-armv7-unknown-linux-gnueabihf.rs  SDL2-2.0.12-i686-pc-windows-msvc.rs  SDL2-2.0.12-x86_64-apple-darwin.rs  SDL2-2.0.12-x86_64-pc-windows-msvc.rs  SDL2-2.0.12-x86_64-unknown-linux-gnu.rs  SDL2-v2.0.10-armv7-unknown-linux-gnueabihf.rs  SDL2-v2.0.10-i686-pc-windows-msvc.rs  SDL2-v2.0.10-x86_64-apple-darwin.rs  SDL2-v2.0.10-x86_64-pc-windows-gnu.rs  SDL2-v2.0.10-x86_64-pc-windows-msvc.rs  SDL2-v2.0.10-x86_64-unknown-linux-gnu.rs  SDL2-v2.0.8-armv7-unknown-linux-gnueabihf.rs  SDL2-v2.0.8-i686-pc-windows-msvc.rs  SDL2-v2.0.8-x86_64-apple-darwin.rs  SDL2-v2.0.8-x86_64-pc-windows-gnu.rs  SDL2-v2.0.8-x86_64-pc-windows-msvc.rs  SDL2-v2.0.8-x86_64-unknown-linux-gnu.rs  SDL2-v2.0.9-armv7-unknown-linux-gnueabihf.rs  SDL2-v2.0.9-i686-pc-windows-msvc.rs  SDL2-v2.0.9-x86_64-apple-darwin.rs  SDL2-v2.0.9-x86_64-pc-windows-gnu.rs  SDL2-v2.0.9-x86_64-pc-windows-msvc.rs  SDL2-v2.0.9-x86_64-unknown-linux-gnu.rs  audio.rs  bindings_linux_arm32.rs  bindings_linux_x64.rs  bindings_mac_x64.rs  bindings_rpi3.rs  bindings_win32_msvc_x64.rs  bindings_win32_x64.rs  blendmode.rs  clipboard.rs  cpuinfo.rs  error.rs  events.rs  filesystem.rs  gamecontroller.rs  gesture.rs  haptic.rs  (+27 more)
src/SDL2-v2.0.10/: i686-pc-windows-msvc.rs
src/SDL2-v2.0.9/: armv7-unknown-linux-gnueabihf.rs  x86_64-unknown-linux-gnu.rs
tests/: common.rs  functions.rs  init_quit.rs  init_tests.rs  notes.txt
