[package]
name = "fermium"
description = "An opinionated crate of SDL2 bindings."
repository = "https://github.com/Lokathor/fermium"
version = "20014.4.2-alpha.0"
authors = ["Lokathor <zefria@gmail.com>"]
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"
keywords = ["SDL2"]
categories = ["external-ffi-bindings", "no-std"]

links = "SDL2"
build = "build.rs"

[dependencies]
chlorine = "1"

[dev-dependencies]
gl46 = { version = "0.1", features = ["global_loader", "GL_ARB_debug_output", "GL_ARB_texture_filter_anisotropic", "GL_KHR_debug"] }

[build-dependencies]
cmake = "0.1"

[features]
# Enable this to dynamicly link to SDL2. The default is to static link because
# even with a staticly linked SDL2 the end user can override the SDL2 used at
# runtime (if absolutely necessary) via SDL2's "Dynamic API" system.
# https://sdl-mirror.readthedocs.io/en/latest/README-dynapi.html
#
# WARNING: THIS DOES NOT WORK ON UNIX SYSTEMS. If you'd like it to work on unix
# systems please submit the PR to fix the build/link process, because I don't
# know how to make the rpath work right.
dynamic_link = []

# Enabling this will completely skip the build/link of SDL2 itself. This makes
# `cargo check` and similar much faster (including rust-analyzer), but you'll
# get linking errors if you try to actually build an executable with this
# enabled (eg: a bin/bench/test).
cargo_check = []

# Not Part Of Semver! With this on, the x86_64-pc-windows-msvc target will build
# much faster. No effect on other targets.
experimental_fast_build = ["dynamic_link"]

# Requires Nightly! Unstable! Use `#[link_args]` for `weak_framework` support on
# macOS (specifically, do this for `GameController.framework` and
# `CoreHaptic.framework` if they're linked in, since they're so new)
nightly_macos_link_args = []

# Use the `sdl2-config` binary that's either on the path, or specified via the
# `FERMIUM_SDL2_CONFIG_PATH` environment variable. If not specified in the
# environment, then we require it be at least the version we'd bundle.
# Otherwise, you should set `FERMIUM_ALLOW_OLDER=1` in the environment.
#
# If no binary is set, we fall back to building and linking our bundled version
# unless `FERMIUM_NO_CMAKE_FALLBACK=1` is set.
use_sdl2_config = []

[package.metadata.docs.rs]
# building the docs is a "check only" style operation.
features = ["cargo_check"]
