[package]
name = "fermium"
description = "An opinionated crate of SDL2 bindings."
repository = "https://github.com/Lokathor/fermium"
version = "20016.1.1"
authors = ["Lokathor <zefria@gmail.com>"]
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"
keywords = ["SDL2"]
categories = ["external-ffi-bindings", "no-std"]

links = "SDL2"
build = "build.rs"

[dependencies]
chlorine = "1"
raw-window-handle = { version = "0.4", optional = true }

[dev-dependencies]
gl33 = { version = "0.1", features = ["global_loader", "GL_ARB_debug_output", "GL_ARB_texture_filter_anisotropic", "GL_KHR_debug"] }

[build-dependencies]
cmake = "0.1"

[features]
# Enable this to dynamicly link to SDL2. The default is to static link because
# even with a staticly linked SDL2 the end user can override the SDL2 used at
# runtime (if absolutely necessary) via SDL2's "Dynamic API" system.
# https://sdl-mirror.readthedocs.io/en/latest/README-dynapi.html 
#
# WARNING: THIS DOES NOT WORK RIGHT ON UNIX SYSTEMS. If you'd like it to work on
# unix systems please submit the PR to fix the build/link process, because I
# don't know how to make the rpath work right.
dynamic_link = []

# Enabling this will completely skip the build/link of SDL2 itself. This makes
# `cargo check` and similar much faster (including rust-analyzer), but you'll
# get linking errors if you try to actually build an executable with this
# enabled (eg: a bin/bench/test).
cargo_check = []

# Not Part Of Semver! With this on, the x86_64-pc-windows-msvc target will build
# much faster by dynamically linking to a pre-built DLL that's provided within
# the crate. On other targets it will just activate dynamic linking, but as
# noted above that's generally bad because the build.rs file isn't currently
# smart enough to cope with that.
experimental_fast_build = ["dynamic_link"]

[package.metadata.docs.rs]
# building the docs is a "check only" style operation.
features = ["cargo_check"]
rustdoc-args = ["--cfg","docs_rs"]
