[package]
name = "fermium"
description = "An opinionated crate of SDL2 bindings."
repository = "https://github.com/Lokathor/fermium"
version = "22401.0.0"
authors = ["Lokathor <zefria@gmail.com>"]
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"
keywords = ["SDL2"]
categories = ["external-ffi-bindings", "no-std"]

links = "SDL2"
build = "build.rs"

[dependencies]
raw-window-handle = { version = "0.4", optional = true }

[dev-dependencies]
gl33 = { version = "0.1", features = ["global_loader", "GL_ARB_debug_output", "GL_ARB_texture_filter_anisotropic", "GL_KHR_debug"] }

[build-dependencies]
cmake = { version = "0.1", optional = true }

[features]
# Enabling this will completely skip the build/link of SDL2 itself. This makes
# `cargo check` and similar much faster (including rust-analyzer), but you'll
# get linking errors if you try to actually build an executable with this
# enabled (eg: a bin/bench/test).
cargo_check = []

# If you enable this, the crate will static link to a build of the bundled
# version of SDL2. Otherwise, the crate will dynamically link to the SDL2
# installed on the system (on Windows x86_64 MSVC it will dynamic link to
# provided developer files).
static_bundled_build = ["cmake"]

[package.metadata.docs.rs]
# building the docs is a "check only" style operation.
features = ["cargo_check"]
rustdoc-args = ["--cfg","docs_rs"]
